--- a/style.css
+++ b/style.css
@@ -353,7 +353,7 @@ button:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, 0.8);
+    background: #ea1d2c;
     justify-content: center;
     align-items: center;
     z-index: 1000;
