--- a/style.css
+++ b/style.css
@@ -353,7 +353,7 @@ button:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    background: #ea1d2c;
+   background: rgba(255, 255, 255, 0.8);
     justify-content: center;
     align-items: center;
     z-index: 1000;
@@ -363,7 +363,7 @@ button:hover {
     content: "";
     width: 50px;
     height: 50px;
-    border: 5px solid #333;
+    border: 5px solid #ea1d2c;
     border-top: 5px solid transparent;
     border-radius: 50%;
     animation: spin 1s linear infinite;
