--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /* Estilos gerais */
 body {
     font-family: 'Arial', sans-serif;
@@ -58,20 +57,15 @@ h1 {
 
 .category-nav {
     position: sticky;
-    top: 60px; /* Ajuste conforme necessário */
+    top: 60px;
     background-color: #fff;
     padding: 10px 0;
     display: flex;
     gap: 15px;
     overflow-x: auto;
     white-space: nowrap;
-    z-index: 101; /* Aumente o z-index */
+    z-index: 99;
     border-bottom: 1px solid #ddd;
-}
-@media (max-width: 768px) {
-    .category-nav {
-        top: 50px; /* Ajuste conforme necessário */
-    }
 }
 
 .category-link {
@@ -353,7 +347,7 @@ button:hover {
     left: 0;
     width: 100%;
     height: 100%;
-   background: rgba(255, 255, 255, 0.8);
+    background: rgba(255, 255, 255, 0.8);
     justify-content: center;
     align-items: center;
     z-index: 1000;
